CHANGES
=======

* Remove qsub file generation
* FIX minor path issue
* Add binary to the command
* Refactor template generaton
* Refactor container parameters
* Run docker container with image qommunicator
* Add paramter file
* Generate qsub files
* FIX tox's issues
* Add API skeleton
* Add version handling with pbr
* Add static code analysis and tox
* very first commit