@@ -6,7 +6,7 @@ SHARED_VOLUME_PATH = '/shared-volume'
 SSH_VOLUME_PATH = '/ssh-volume'
 
 PROJECT_PREFIX = 'sge-jobs'
-PROJECT_DIRECTORIES = ('bin', 'ref', 'input', 'error', 'output')
+PROJECT_DIRECTORIES = ['bin', 'ref', 'input', 'error', 'output']
 
 GOLDEN_BINARY_DIR_NAME = 'golden_binary'
 GOLDEN_REFERENCES_DIR_NAME = 'golden_references'
