@@ -1,3 +1,4 @@
+import logging
 import os
 from enum import Enum
 from typing import Tuple, Union, Dict
@@ -8,6 +9,8 @@ from marshmallow import fields, Schema
 
 from qassembler.config import SHARED_VOLUME_PATH, PROJECT_PREFIX
 
+log = logging.getLogger(__name__)
+
 
 class JobStatus(Enum):
     NOT_FOUND = 'job has not been found'
@@ -17,7 +20,7 @@ class JobStatus(Enum):
     FINISH = 'finish'
 
 
-class JobStatusResponse(Schema):  # type: ignore
+class JobStatusResponse(Schema):
     job_state = fields.Str()
 
 
@@ -52,13 +55,15 @@ def get_job_status(job_name: str) -> JobStatus:
     if not os.path.exists(project_path):
         return JobStatus.NOT_FOUND
     else:
+        with open(os.path.join(project_path, 'status'), 'r') as \
+                status_file:
+            status = status_file.readline()
+            try:
+                return JobStatus(status)
+            except ValueError as status_error:
+                log.debug(f'unknown status error: {status_error}')
+            raise ValueError
         try:
-            with open(os.path.join(project_path, 'status'), 'r') as status_file:
-                status = status_file.readline()
-                try:
-                    return JobStatus(status)
-                except ValueError as status_error:
-                    log.debug(f'unknown status error: {status_error}')
-                raise ValueError
+            pass
         except FileNotFoundError:
             return JobStatus.PENDING
